--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "username": "cardnumber",
   "password": "password",
   "interval": 10,
+  "timeout": 3,
   "enable-mac-auth": true,
   "disable-tls-verification": false
 }
